mksc/testcases/compile/fail/class_6.mks
# compile fail
# dupricate method
class A
	def class.method()
	end

	def method()
	end
end
